semester-3/Exam/sock-shop/grafana-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "grafana-ingress"
  
  annotations:
  # Core Ingress Settings  
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing

  labels:
    app: grafana-ingress
# SSL Setting - 2
spec:
  rules:
  - http:
      paths:  
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 80
